--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Copy this to .env locally; don't commit .env
 FIREBASE_PROJECT_ID=ubbadminton
 DATABASE_URL=sqlite:///./dev.db
 ALLOWED_ORIGINS=http://127.0.0.1:5173,http://localhost:5173
