--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FIREBASE_PROJECT_ID=ubbadminton
 DATABASE_URL=sqlite:///./dev.db
-ALLOWED_ORIGINS=http://127.0.0.1:5173,http://localhost:5173
+ALLOWED_ORIGINS=http://127.0.0.1:5173,http://localhost:5173,https://reficul013.github.io
 DATABASE_URL=postgresql://neondb_owner:npg_zQ14URbAvJSe@ep-snowy-glitter-ad7btpoi-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
